:zap: InternalResourceViewTests